// ════════════════════════════════════════════════════════════════════════
//  Lebenslauf Boost AI — Datenbankschema (DBML)
//  Auf https://dbdiagram.io einfügen → interaktives ER-Diagramm.
//  Quelle der Wahrheit: backend/models.py · Ausführliche Doku: docs/DATABASE.md
// ════════════════════════════════════════════════════════════════════════

Project lebenslauf_boost_ai {
  database_type: 'SQLite'
  Note: '''
    KI-Lebenslauf-Optimierer — FastAPI + SQLAlchemy.
    4 Tabellen um den zentralen Hub `sessions`:
    1:1 zu cv_documents (UNIQUE FK), 1:n zu generations & messages.
    Löschen kaskadiert (ORM: all, delete-orphan / DDL: ON DELETE CASCADE).
    IDs sind UUIDv4-Strings.
  '''
}

Enum language_enum {
  de
  en
}

Enum provider_enum {
  claude   [note: 'Anthropic']
  openai   [note: 'OpenAI (auch Embeddings für RAG)']
}

Enum technique_enum {
  auto              [note: 'Few-shot + Chain-of-Thought kombiniert']
  few_shot
  chain_of_thought
  refine            [note: 'iterative Verfeinerung (/api/refine)']
}

Enum role_enum {
  user
  assistant
}

Table sessions {
  id              varchar(36)  [pk, note: 'UUIDv4 — nicht erratbar']
  language        language_enum [not null, default: 'de']
  job_description text         [not null, default: '', note: 'eingefügte Stellenanzeige']
  wishes          text         [not null, default: '', note: 'optionale Nutzerwünsche']
  created_at      datetime     [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'Nutzersitzung — zentraler Hub. POST /api/session'
}

Table cv_documents {
  id             varchar(36)  [pk, note: 'UUIDv4']
  session_id     varchar(36)  [not null, unique, ref: - sessions.id, note: 'UNIQUE ⇒ 1:1 · ON DELETE CASCADE']
  filename       varchar(255) [not null, note: 'Original-Dateiname des Uploads']
  content        text         [not null, note: 'extrahierter Volltext (pypdf/python-docx)']
  index_json     text         [not null, note: 'RAG: {"chunks":[…], "embeddings":[[1536×float]…]|null}']
  photo_data_url text         [note: 'data:image/jpeg;base64,… (Portrait 4:5) | NULL']
  created_at     datetime     [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'Lebenslauf + RAG-Index + Foto. Re-Upload ersetzt die Zeile. POST /api/upload-cv'
}

Table generations {
  id               varchar(36)    [pk, note: 'UUIDv4']
  session_id       varchar(36)    [not null, ref: > sessions.id, note: 'INDEX · ON DELETE CASCADE']
  provider         provider_enum  [not null]
  model            varchar(64)    [not null, note: "z. B. 'gpt-4o-mini' | 'claude-sonnet-4-6' | 'demo'"]
  technique        technique_enum [not null]
  content          text           [not null, note: 'Lebenslauf als Markdown (# Name / ## Profil / …)']
  ats_score        float          [not null, default: 0, note: 'CHECK 0–100 · Keyword-Abdeckung %']
  matched_keywords text           [not null, default: '[]', note: 'JSON-Array, lowercase']
  missing_keywords text           [not null, default: '[]', note: 'JSON-Array, lowercase']
  is_selected      boolean        [not null, default: false, note: 'reserviert für UI-Favorit']
  created_at       datetime       [not null, default: `CURRENT_TIMESTAMP`]

  Note: 'KI-Entwürfe + Bewertung. Vergleichsmodus ⇒ 2 Zeilen (claude & openai). POST /api/generate|refine'
}

Table messages {
  id         varchar(36) [pk, note: 'UUIDv4']
  session_id varchar(36) [not null, ref: > sessions.id, note: 'INDEX · ON DELETE CASCADE']
  role       role_enum   [not null]
  content    text        [not null]
  created_at datetime    [not null, default: `CURRENT_TIMESTAMP`, note: 'Sortierkriterium des Verlaufs']

  Note: 'Conversation History für iteratives Verfeinern (Retaining Conversation History)'
}

TableGroup "Sitzung & Dokument" {
  sessions
  cv_documents
}

TableGroup "KI-Ausgaben" {
  generations
  messages
}
